<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TelephoneBookApp</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="str_empty_view">Tap + to add a contact</string>
    
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>

    <!-- Action Buttons -->
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="action_import_export">Import/Export</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>

    <!-- AddEditActivity Strings -->
    <string name="str_add_contact">Add contact</string>
    <string name="str_edit_contact">Edit contact %s</string>
    <string name="str_name">Name</string>
    <string name="str_surname">Surname</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="str_address">Address</string>
    <string name="str_no_camera">You have no camera on device.</string>
    <string name="str_no_name_typed">Name field can\'t be empty.</string>
    <string name="str_no_internet">You have no internet connection.</string>
    
    <!-- Import/Export Dialog Strings -->
    <string name="title_import_export">Import/Export</string>
    
    <!-- Download Image Task -->
    <string name="str_error_download">Error download image</string>
    
    <!-- Export Task Strings -->
    <string name="str_export_result_true">Data was exported.</string>
    <string name="str_export_result_false">Data wasn\'t exported because of internal error.</string>
    
    <!-- Import Task Strings -->
    <string name="str_import_result_true">Data was imported.</string>
    <string name="str_import_result_false">No files for import.</string>
    <string name="str_no_sd_card">SD card not mounted.</string>
    
    <!-- Add Photo Dialog Strings -->
    <string name="title_add_photo">Add Photo</string>
    
    <!-- Preferences Strings -->
    <string name="pref_display_category">Display Options</string>
    <string name="pref_display_by_gender_title">Contacts filter</string>
    <string name="pref_display_by_gender_summary">Allows to select contacts to display</string>
    <string name="pref_display_by_gender_default">Show all</string>
    <string name="pref_colors_by_gender_title">Choose color theme</string>
    <string name="pref_colors_by_gender_summary">Allows to select color theme</string>
    <string name="pref_colors_by_gender_default">Blue/Pink</string>
    
    <string name="str_male_only">Show male only</string>
    <string name="str_female_only">Show female only</string>
</resources>
