<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:title="@string/pref_display_category">
        
        <ListPreference 
            android:key="prefDisplayByGender"
            android:title="@string/pref_display_by_gender_title"
            android:summary="@string/pref_display_by_gender_summary"
            android:entries="@array/arrayEntriesByGender"
            android:entryValues="@array/arrayValuesByGender"
            android:defaultValue="@string/pref_display_by_gender_default"/>
        
        <ListPreference 
            android:key="prefColorsByGender"
            android:title="@string/pref_colors_by_gender_title"
            android:summary="@string/pref_colors_by_gender_summary"
            android:entries="@array/array_entries_color_theme"
            android:entryValues="@array/array_values_color_theme"
            android:defaultValue="@string/pref_colors_by_gender_default"/>
        
    </PreferenceCategory>
    

</PreferenceScreen>
