<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mtba="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        mtba:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/action_remove"
        mtba:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        mtba:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_import_export"
        android:icon="@drawable/ic_action_import_export"
        android:title="@string/action_import_export"
        mtba:showAsAction="ifRoom"/>

</menu>
